# unilib

./:  .gitmodules  .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: architecture.md  setup.md  usage.md
examples/: config_info.cpp  game_example.cpp  imgui_demo.cpp  json_parse.cpp  net_client.cpp  plugin_loader.cpp  sfml_game.cpp  simple_logger.cpp  tensorflow_demo.cpp
include/: unilib.hpp
include/boost/: asio.hpp  filesystem.hpp
include/core/: config.hpp  logger.hpp
include/data/: json.hpp  xml.hpp
include/fs/: filesystem_utils.hpp
include/games/: opengl.hpp  sfml.hpp
include/gui/: imgui.hpp  sdl.hpp
include/meta/: type_traits.hpp
include/ml/: dlib.hpp  tensorflow.hpp
include/net/: http.hpp  websocket.hpp
include/plugin/: plugin_manager.hpp
include/std/: algorithm.hpp  string.hpp  vector.hpp
include/sys/: os_utils.hpp  threading.hpp
scripts/: build.bat  build.sh  clean.bat  clean.sh
src/: CMakeLists.txt  main.cpp
src/boost/: asio.cpp  filesystem.cpp
src/core/: config.cpp  logger.cpp
src/data/: json.cpp  xml.cpp
src/fs/: filesystem_utils.cpp
src/games/: opengl.cpp  sfml.cpp
src/gui/: imgui.cpp  sdl.cpp
src/meta/: type_traits.cpp
src/ml/: dlib.cpp  tensorflow.cpp
src/net/: http.cpp  websocket.cpp
src/plugin/: plugin_manager.cpp
src/std/: algorithm.cpp  string.cpp  vector.cpp
src/sys/: os_utils.cpp  threading.cpp
tests/: CMakeLists.txt  test_config.cpp  test_filesystem.cpp  test_http.cpp  test_logger.cpp  test_plugin.cpp  test_string.cpp  test_vector.cpp  test_websocket.cpp
